# mesh2-mono-repo

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/spotify/: client.rs  mod.rs  os_now_playing.rs  types.rs
apps/desktop/src/components/: Settings.tsx
apps/desktop/src/services/: TauriSpotifyService.ts  WebSpotifyService.ts
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  vite-env.d.ts
apps/web/src/services/: WebSpotifyService.ts
backend/: .env.example  .env.production.example  .gitignore  Cargo.toml  README.md
backend/migrations/: 20240101000001_create_users.sql  20240101000002_create_sessions.sql  20240101000003_create_admin_users.sql  20260612000001_user_identity.sql
backend/src/: auth.rs  config.rs  error.rs  main.rs  models.rs  spotify.rs  token_refresh.rs
backend/src/handlers/: mod.rs  player.rs  sessions.rs  users.rs
