[package]
name = "mesh-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
base64 = "0.21"
sha2 = "0.10"
rand = "0.8"
urlencoding = "2"
