[package]
name = "mesh-desktop"
version = "0.1.0"
description = "Mesh - Spotify Remote Control Desktop App"
authors = ["Mesh"]
edition = "2021"
license = "MIT"
rust-version = "1.70"

[lib]
name = "mesh_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for Spotify API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["full", "sync", "time", "macros"] }

# Error handling
thiserror = "1"
anyhow = "1"

# OAuth helpers
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2"

# Time/dates
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
tracing = "0.1"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Keyring for secure token storage
keyring = "3"

# Cross-platform directory paths
dirs = "5"

# Open URLs in browser
open = "5"

# Local HTTP server for OAuth callback
tiny_http = "0.12"

# URL encoding
urlencoding = "2"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific for Now Playing integration
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSDictionary", "NSArray", "NSObject"] }
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSRunningApplication", "NSWorkspace"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific for media integration
windows = { version = "0.58", features = [
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
] }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux D-Bus for MPRIS integration
zbus = { version = "4", default-features = false, features = ["tokio"] }

[features]
default = []
# Custom protocol for OAuth callback (alternative to local server)
custom-protocol = ["tauri/protocol-asset"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
